# subseq_auth

./: AGENTS.md  Cargo.toml
migrations/: 20260129215928_base.sql  20260208001000_scoped_roles.sql  20260208003000_role_delegation_policy.sql
src/: api.rs  auth.rs  db.rs  group_id.rs  ids.rs  lib.rs  oidc.rs  prelude.rs  tokens.rs  user_id.rs  workload.rs
