[package]
name = "subseq_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.8", features = ["macros", "http2"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
chrono = { version = "0.4.43", features=["serde"] }
cookie = "0.18.0"
hyper = { version = "1.4.1" }
email_address = "0.2.4"
futures-util = "0.3.30"
openidconnect = "3.4.0"
reqwest = { version = "0.11.23", features = ["json", "rustls-tls"] }
rustls = "0.23.11"
rustls-pemfile = "2.1.2"
serde = "1.0.194"
serde_json = "1.0.111"
sqlx = { version = "0.8.6", optional=true, features = ["postgres", "runtime-tokio-rustls", "macros", "uuid", "chrono"] }
time = "0.3.36"
tower = {version = "0.5.2" }
tower-sessions = { version = "0.14" }
tracing = "0.1.40"
url = "2.4.0"
urlencoding = "2.1.3"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
once_cell = "1.21.3"

[features]
default = ["api"]
api = ["sqlx"]
